--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ ul li {
 body {
     width: 100%;
     display: grid;
-    grid-template: repeat(6, 1fr) / 1fr 4fr;
+    grid-template: repeat(1, 100vh) / 1fr 4fr;
 }
 
 #header {
@@ -50,6 +50,7 @@ body {
     grid-template-columns: 50px 4fr 50px 100px 100px ;
     align-items: center;
     text-align: center;
+    padding: 0 1em;
 }
 
 #header .second-container {
@@ -60,6 +61,7 @@ body {
     grid-template-columns: 70px 5fr auto auto auto ;
     align-items: center;
     gap: 15px;
+    padding: 1em 2em;
 }
 
 .first-container img{
@@ -108,4 +110,40 @@ body {
     background: var(--deep-blue);
     border-radius: 18px;
     font-weight: 500;
+}
+
+.sidebar {
+    background-color: var(--deep-blue);
+    color: var(--white);
+    padding: 1rem;
+    display: grid;
+    gap: 30px;
+    grid-template-rows: 40px 1fr 1fr;
+}
+
+.sidebar .logo h2 img{
+    width: 35px;
+    height: auto;
+}
+
+.sidebar img {
+    width: 20px;
+    height: auto;
+    margin-right: 15px;
+}
+
+.navigation-links , .support-links{
+    display: grid;
+    grid-template: repeat(6, 30px) / 1fr;
+    align-items: center;
+    text-align: start;
+    padding: 0 1em;
+}
+
+.navigation-links li a, .support-links li a {
+    color: var(--white);
+    text-decoration: none;
+    text-align: start;
+    font-weight: 600;
+    font-size: 14px;
 }
