Style Main Container

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap'); */
 
 :root {
     /* colors */
@@ -30,21 +30,25 @@ ul li {
 body {
     width: 100%;
     display: grid;
-    grid-template: repeat(1, 100vh) / 1fr 4fr;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: repeat(7, 100px);
+    height: 100vh;
 }
 
 #header {
     display: grid;
-    grid-template: 1fr 1fr / 1fr;
-    height: 150px;
+    grid-template:50px 30px / 1fr;
+    height: 195px;
     grid-column: 2 / 6;
-    grid-row: 1;
+    grid-row: 1 / 3;
     padding: 1em 2em;
+    box-shadow: 3px 4px 3px  rgb(199, 197, 197);
+
 }
 
 #header .first-container {
     grid-column: 1;
-    grid-row: 1;
+    grid-row: 1 / 2;
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: 50px 4fr 50px 100px 100px ;
@@ -54,8 +58,8 @@ body {
 }
 
 #header .second-container {
-    grid-column: 1;
-    grid-row: 2;
+    grid-column: 1 / 7;
+    grid-row: 2 / 3;
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: 70px 5fr auto auto auto ;
@@ -106,7 +110,7 @@ body {
 .second-container .btn a {
     text-decoration: none;
     color: var(--white);
-    padding: 7% 25px;
+    padding: 7px 25px;
     background: var(--deep-blue);
     border-radius: 18px;
     font-weight: 500;
@@ -116,9 +120,11 @@ body {
     background-color: var(--deep-blue);
     color: var(--white);
     padding: 1rem;
+    grid-row: 1 / 10;
+    grid-column: 1 / 1;
     display: grid;
     gap: 30px;
-    grid-template-rows: 40px 1fr 1fr;
+    grid-template-rows: 40px 1fr 2fr;
 }
 
 .sidebar .logo h2 img{
@@ -136,14 +142,146 @@ body {
     display: grid;
     grid-template: repeat(6, 30px) / 1fr;
     align-items: center;
-    text-align: start;
     padding: 0 1em;
 }
 
 .navigation-links li a, .support-links li a {
     color: var(--white);
     text-decoration: none;
-    text-align: start;
     font-weight: 600;
     font-size: 14px;
+}
+
+#container {
+    grid-column: 2 / 2;
+    grid-row: 3 / 9;
+    display: grid;
+    grid-template-columns: 400px 200px;
+    grid-template-rows: 60px repeat(3, 220px) 280px auto;
+    background: var(--light-blue);
+    justify-content: space-between;
+}
+
+#container .headers {
+    width: 85%;
+    grid-column: 1 / 5;
+    display: grid;
+    grid-auto-flow: column;
+    justify-content: space-between;
+    padding: 1rem 2rem;
+    grid-row: 1 / 1;
+}
+
+.headers h3 {
+    height: 10px;
+}
+
+.headers h3:last-child {
+    justify-self: flex-start;
+}
+
+.cards {
+    grid-column: 1 / 1;
+    grid-row-start: 2 / 2;
+    display: grid;
+    grid-template-columns: 320px 320px;
+    grid-template-rows: repeat(3, 160px);
+    gap: 15px;
+    padding-left: 20px;
+}
+
+
+.cards .card {
+    width: 320px;
+    height: 160px;
+    font-size: 13px;
+    color:var(--light-gray);
+    padding: 0.8rem;
+    max-width: 72ch;
+    border-left: 8px solid var(--yellow);
+    border-radius: 16px;
+    background-color: var(--white);
+}
+
+.card .content {
+    margin-bottom: 18px;
+}
+
+.card .content h4 {
+    font-size: 15px;
+    color: var(--black);
+}
+
+.card .card-links {
+    display: grid;
+    grid-auto-flow: column;
+    place-content: end;
+    grid-template-columns: repeat(3, 30px);
+}
+
+.card-links li img {
+    width: 20px;
+}
+
+.sidebar-1 {
+    font-size: 8px;
+    grid-row: 2 / 3;
+    grid-column: 3 / 4;
+    background: var(--white);
+    padding: 1.5rem;
+    width: 280px;
+    align-self: flex-start;
+    display: grid;
+    gap: 15px;
+    border-radius: 5px;
+}
+
+.sidebar-1 div {
+    border-bottom: 1px solid lightgrey;
+    padding-bottom: 7px;
+}
+
+.sidebar-1 div:last-child {
+    border: none;
+}
+
+.sidebar-1 div h4 {
+    font-size: 10px;
+}
+
+.sidebar-1 div p {
+    max-width: 60ch;
+}
+
+.section-2 {
+    grid-column: 3 / 4;
+    grid-row: 3 / 3;
+    font-size: 10px; 
+     display: grid;
+     grid-template-rows: auto;
+     background: var(--white);
+     margin-top: 100px;
+     height: 190px;
+}
+
+.section-2 > div {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 60px 100px;
+    justify-content: center;
+    padding: 0.1rem;
+}
+ .section-2 h2 {
+    background-attachment: var(--light-blue);
+    margin: -30px 0;
+ }
+
+.section-2 img {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+}
+
+.section-2 > div > div h6{
+    font-size: 12px;
 }
